@@ -11,6 +11,7 @@ Improvements
 Bugfixes
 --------
 - lua: log() output is visible with default log level again (!1208)
+- build: fix when knot-dns headers are on non-standard location (!1210)
 
 
 Knot Resolver 5.4.1 (2021-08-19)
